--- a/simple.html
+++ b/simple.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Заголовок страницы</h1>
-    <p>Параграф текста</p>
+    <p title="всплывающая подсказка">Параграф текста</p>
   </body>
 </html>
